# cubera

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
scripts/: build-linux.sh
src/: CMakeLists.txt  lib.cpp  main.cpp
